tests/error/misc_errors/result_tag_not_str.err
Guppy compilation failed. Error in file $FILE:7

5:    @compile_guppy
6:    def foo(x: int) -> None:
7:        result((), x)
                 ^^
GuppyTypeError: Expected a string literal
